RESOLVED FIXED 263011
Address comments that were missing in https://commits.webkit.org/269195@main
https://bugs.webkit.org/show_bug.cgi?id=263011
Summary Address comments that were missing in https://commits.webkit.org/269195@main
youenn fablet
Reported 2023-10-11 06:21:53 PDT
Address comments that were missing in https://commits.webkit.org/269195@main
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-11 06:22:23 PDT
youenn fablet
Comment 2 2023-10-11 07:24:42 PDT
EWS
Comment 3 2023-10-11 10:53:48 PDT
Committed 269207@main (87c90b919c46): <https://commits.webkit.org/269207@main> Reviewed commits have been landed. Closing PR #18940 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.